Added correct measuring of memory and time